tests/compile_fail/ktstr_test_float_not_float.stderr
error: expected float literal for max_spread_pct
 --> tests/compile_fail/ktstr_test_float_not_float.rs:6:31
  |
6 | #[ktstr_test(max_spread_pct = "high")]
  |                               ^^^^^^

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_float_not_float.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_float_not_float.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_float_not_float.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
